--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.1",
-    "babel-polyfill": "~0.0.1"
+    "babel-polyfill": "~0.0.1",
+    "angularfire": "~2.0.1"
   }
 }
