--- a/bower.json
+++ b/bower.json
@@ -5,5 +5,8 @@
     "ionic": "driftyco/ionic-bower#1.3.1",
     "babel-polyfill": "~0.0.1",
     "angularfire": "~2.0.1"
+  },
+  "dependencies": {
+    "ng-cordova-oauth": "^0.2.10"
   }
 }
